# ws-cli

./: .gitignore  README.md  SPEC.md  TESTING.md  install.sh  pyproject.toml  uninstall.sh  ws.py
tests/: conftest.py  test_completion.py  test_crud.py  test_jsonc.py  test_open.py  test_reconcile.py  test_regressions.py
